Add Dockerfile and Kamal deployment configuration
Add Docker and Kamal 2.x deployment setup for the test/dummy Rails app
to enable containerized deployments with Thruster as the HTTP proxy.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 
 .DS_Store
 
+# Kamal secrets (contains sensitive deployment credentials)
+/test/dummy/.kamal/secrets
+
 # Claude Code local files
 CLAUDE.md
 AGENTS.md
