--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,13 @@
 /test/dummy/storage/
 /test/dummy/tmp/
 /test/dummy/app/assets/builds/
+/test/dummy/config/credentials/*.key
 
 .DS_Store
 
 # Kamal secrets (contains sensitive deployment credentials)
 /test/dummy/.kamal/secrets
+/.kamal/secrets
 
 # Claude Code local files
 CLAUDE.md
